--- a/Calculus_HW_8.ipynb
+++ b/Calculus_HW_8.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f5fd92f",
+   "id": "6aee5a04",
    "metadata": {},
    "source": [
     "составим функцию Лагранжа:"
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28f71e49",
+   "id": "96fc4783",
    "metadata": {},
    "source": [
     "найдем частные производные, приравняем их к нулю и решим систему уравнений:"
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6530c7df",
+   "id": "5b6d23f5",
    "metadata": {},
    "source": [
     "### $$\\begin{cases}L'_{x}=-8+2\\lambda x=0 \\\\L'_{y}=6+2\\lambda y=0 \\\\L'_{\\lambda}=x^2+y^2-36=0\\end{cases}$$"
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af733b10",
+   "id": "3d70d3b6",
    "metadata": {},
    "source": [
     "### $$\\Rightarrow \\begin{cases} x=\\frac{4}{\\lambda} \\\\ y=\\frac{3}{\\lambda} \\\\ \\lambda^2=\\frac{25}{36}\\end{cases}$$"
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82c9eb32",
+   "id": "0b52cd24",
    "metadata": {},
    "source": [
     "#### $$\\Rightarrow \\left[ \\begin{gathered} \\left\\{\\begin{gathered}x=\\frac{24}{5} \\\\ y=\\frac{18}{5} \\\\ y=\\frac{5}{6}\\end{gathered}\\right. \\\\ \\left\\{\\begin{gathered}x=-\\frac{24}{5} \\\\ y=-\\frac{18}{5} \\\\ y=-\\frac{5}{6} \\end{gathered}\\right.\\end{gathered} \\right.$$"
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82fc20cb",
+   "id": "a0b8b6b4",
    "metadata": {},
    "source": [
     "получаем две точки $(\\frac{24}{5},\\frac{18}{5},\\frac{5}{6})$ и $(-\\frac{24}{5},-\\frac{18}{5},-\\frac{5}{6})$"
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e4da2da",
+   "id": "96f599bd",
    "metadata": {},
    "source": [
     "найдём вторые производные:"
@@ -112,15 +112,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e31b4eb3",
+   "id": "1d8256cb",
    "metadata": {},
    "source": [
-    "### $$L''_{xx}=2\\lambda \\\\ L''_{xy}=0 \\\\ L''_{x\\lambda}=2x$$"
+    "### $$\\begin{gathered}L''_{xx}=2\\lambda \\\\ L''_{xy}=0 \\\\ L''_{x\\lambda}=2x\\end{gathered}$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8c02e3b1",
+   "id": "cb9f7254",
    "metadata": {},
    "source": [
     "### $$L''_{yx}=0 \\\\ L''_{yy}=2\\lambda \\\\ L''_{y\\lambda}=2y$$"
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1d7a3c0",
+   "id": "2953b17a",
    "metadata": {},
    "source": [
     "### $$L''_{\\lambda x}=2x \\\\ L''_{\\lambda y}=2y \\\\ L''_{\\lambda\\lambda}=0$$"
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c4879fd",
+   "id": "0a4b3dc6",
    "metadata": {},
    "source": [
     "далее найдем определитель в общем виде, а затем уже разберемся с каждой точкой:"
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a46bac3a",
+   "id": "be8ff943",
    "metadata": {},
    "source": [
     "### $$\\Delta=\\begin{vmatrix}2\\lambda & 0 & 2x\\\\ 0 & 2\\lambda & 2y\\\\2x & 2y & 0\\\\\\end{vmatrix}=\\begin{vmatrix}+ & - & +\\\\ - & + & -\\\\+ & - & +\\\\\\end{vmatrix}=2\\lambda \\cdot\\begin{vmatrix}2\\lambda & 2y\\\\2y & 0\\\\\\end{vmatrix}-0\\cdot\\begin{vmatrix}0 & 2y\\\\2x & 0\\\\\\end{vmatrix}+2x\\cdot\\begin{vmatrix}0 & 2\\lambda\\\\2x & 2y\\\\\\end{vmatrix}\\\\=2\\lambda \\cdot (2\\lambda \\cdot0-2y\\cdot2y)-0+2x\\cdot(0\\cdot2y - 2\\lambda\\cdot2x) = -8\\lambda(x^2+y^2)$$"
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e866e8b7",
+   "id": "4201b7d2",
    "metadata": {},
    "source": [
     "по условию $x^2+y^2=36$, тогда"
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe74eba9",
+   "id": "afcf60dc",
    "metadata": {},
    "source": [
     "### $$\\Delta=-8\\lambda \\cdot 36=-288\\lambda$$"
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3b931bb",
+   "id": "7e54a150",
    "metadata": {},
    "source": [
     "т.е. знак определителя засисит только от знака $\\lambda$"
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41486be5",
+   "id": "b76f5313",
    "metadata": {},
    "source": [
     "#### если $\\lambda=\\frac{5}{6}$, то $\\Delta<0$, следовательно $(\\frac{24}{5},\\frac{18}{5},\\frac{5}{6})$ - точка минимума"
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fa09a31",
+   "id": "f96ee112",
    "metadata": {},
    "source": [
     "#### если $\\lambda=-\\frac{5}{6}$, то $\\Delta>0$, следовательно $(-\\frac{24}{5},-\\frac{18}{5},-\\frac{5}{6})$ - точка максимума"
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb82a6d2",
+   "id": "ad38d5c6",
    "metadata": {},
    "source": [
     "составим функцию Лагранжа:"
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9dc354f",
+   "id": "cd271839",
    "metadata": {},
    "source": [
     "### $$L(x,y,\\lambda)=2x^2+12xy+32y^2+15+\\lambda \\cdot (x^2+16y^2-64)$$"
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d514dc4b",
+   "id": "3010d424",
    "metadata": {},
    "source": [
     "найдем частные производные, приравняем их к нулю и решим систему уравнений:"
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "966219f7",
+   "id": "79cec1fc",
    "metadata": {},
    "source": [
     "### $$\\begin{cases}L'_{x}=4x+12y+2\\lambda x=0, \\\\L'_{y}=12x+64y+32\\lambda y=0, \\\\L'_{\\lambda}=x^2+16y^2-64=0 \\end{cases}$$ "
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57113d05",
+   "id": "dc54eb03",
    "metadata": {},
    "source": [
     "### $$\\Rightarrow\\begin{cases} x=-\\frac{12y}{4+2\\lambda} \\\\ 12(-\\frac{12y}{4+2\\lambda})+64y+32\\lambda y=0 \\\\ x^2+16y^2-64=0\\end{cases}$$ "
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99493c18",
+   "id": "1129201c",
    "metadata": {},
    "source": [
     "### $$\\Rightarrow\\begin{cases} x=-\\frac{12y}{4+2\\lambda} \\\\ \\left[\\begin{gathered}\\lambda = -\\frac{7}{2} \\\\ \\lambda = -\\frac{1}{2}\\end{gathered}\\right.\\\\x^2+16y^2-64=0\\end{cases}$$ "
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86f980c4",
+   "id": "045b62d8",
    "metadata": {},
    "source": [
     "### $$\\Rightarrow \\left[ \\begin{gathered} \\left\\{\\begin{gathered}\\lambda =-\\frac{7}{2} \\\\ x=4y \\\\ \\left[\\begin{gathered}y=\\sqrt{2} \\\\y=-\\sqrt{2}\\end{gathered}\\right.\\end{gathered}\\right. \\\\\\left\\{\\begin{gathered}\\lambda =-\\frac{1}{2} \\\\ x=-4y \\\\ \\left[\\begin{gathered} y=\\sqrt{2} \\\\y=-\\sqrt{2}\\end{gathered}\\right.\\end{gathered}\\right.\\end{gathered}\\right.$$"
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69a1a05e",
+   "id": "49a27758",
    "metadata": {},
    "source": [
     "получаем четыре точки \n",
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7f12c97",
+   "id": "cda229de",
    "metadata": {},
    "source": [
     "найдём вторые производные:"
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ee768b0",
+   "id": "5842b094",
    "metadata": {},
    "source": [
     "### $$L''_{xx}=4+2\\lambda \\\\ L''_{xy}=12 \\\\ L''_{x\\lambda}=2x$$"
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cde80cc",
+   "id": "d948ff32",
    "metadata": {},
    "source": [
     "### $$L''_{yx}=12 \\\\ L''_{yy}=64+32\\lambda \\\\ L''_{y\\lambda}=32y$$"
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "853961ed",
+   "id": "2a78a609",
    "metadata": {},
    "source": [
     "### $$L''_{\\lambda x}=2x \\\\ L''_{\\lambda y}=32y \\\\ L''_{\\lambda\\lambda}=0$$"
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ca66fdc",
+   "id": "3c689f3f",
    "metadata": {},
    "source": [
     "далее найдем определитель в общем виде, а затем уже разберемся с каждой точкой:"
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "306ddf43",
+   "id": "6bcc86b7",
    "metadata": {},
    "source": [
     "### $$\\Delta=\\begin{vmatrix}4+2\\lambda & 12 & 2x\\\\ 12 & 64+32\\lambda & 32y\\\\2x & 32y & 0\\\\\\end{vmatrix}=-256(x^2+16y^2)-126\\lambda(x^2+16y^2)+1536xy$$"
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "505d4072",
+   "id": "71067cec",
    "metadata": {},
    "source": [
     "по условию $x^2+16y^2=64$, тогда"
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8b1cad3",
+   "id": "5257a074",
    "metadata": {},
    "source": [
     "### $$\\Delta=-256\\cdot64-126\\lambda\\cdot64+1536xy=-16384-8192\\lambda+1536xy$$"
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "378e0889",
+   "id": "f957f0c9",
    "metadata": {},
    "source": [
     "точкa $(4\\sqrt{2},\\sqrt{2},-\\frac{7}{2})$:"
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0be892e",
+   "id": "a386e617",
    "metadata": {},
    "source": [
     "### $$\\Delta=-16384-8192\\cdot(-\\frac{7}{2})+1536\\cdot4\\sqrt{2}\\cdot \\sqrt{2}>0$$"
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66846ee3",
+   "id": "db1fa728",
    "metadata": {},
    "source": [
     "#### следовательно, точкa $(4\\sqrt{2},\\sqrt{2},-\\frac{7}{2})$ - точка максимума"
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95aa8f56",
+   "id": "76455c25",
    "metadata": {},
    "source": [
     "точкa $(-4\\sqrt{2},-\\sqrt{2},-\\frac{7}{2})$:"
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f8913cd",
+   "id": "7a65a471",
    "metadata": {},
    "source": [
     "### $$\\Delta=-16384-8192\\cdot(-\\frac{7}{2})+1536\\cdot(-4\\sqrt{2})\\cdot (-\\sqrt{2})>0$$"
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a272b80e",
+   "id": "128e0738",
    "metadata": {},
    "source": [
     "#### следовательно, точкa $(-4\\sqrt{2},-\\sqrt{2},-\\frac{7}{2})$ - точка максимума"
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "203f57ae",
+   "id": "b25d8da0",
    "metadata": {},
    "source": [
     "точкa $(-4\\sqrt{2},\\sqrt{2},-\\frac{1}{2})$:"
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2ef177c",
+   "id": "8ef87e65",
    "metadata": {},
    "source": [
     "### $$\\Delta=-16384-8192\\cdot(-\\frac{1}{2})+1536\\cdot(-4\\sqrt{2})\\cdot \\sqrt{2}<0$$"
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d72207a8",
+   "id": "ea1a7551",
    "metadata": {},
    "source": [
     "#### следовательно, точкa $(-4\\sqrt{2},\\sqrt{2},-\\frac{1}{2})$ - точка минимума"
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd4b46b8",
+   "id": "f23334cc",
    "metadata": {},
    "source": [
     "точкa $(4\\sqrt{2},-\\sqrt{2},-\\frac{1}{2})$:"
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fc72243",
+   "id": "7c708622",
    "metadata": {},
    "source": [
     "### $$\\Delta=-16384-8192\\cdot(-\\frac{1}{2})+1536\\cdot4\\sqrt{2}\\cdot(-\\sqrt{2})<0$$"
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "040350a0",
+   "id": "b9bda072",
    "metadata": {},
    "source": [
     "#### следовательно, точкa $(4\\sqrt{2},-\\sqrt{2},-\\frac{1}{2})$ - точка минимума"
@@ -443,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24572272",
+   "id": "983dbf0e",
    "metadata": {},
    "outputs": [],
    "source": []
