--- a/Calculus_HW_8.ipynb
+++ b/Calculus_HW_8.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6aee5a04",
+   "id": "1283ffff",
    "metadata": {},
    "source": [
     "составим функцию Лагранжа:"
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96fc4783",
+   "id": "640f7eaa",
    "metadata": {},
    "source": [
     "найдем частные производные, приравняем их к нулю и решим систему уравнений:"
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b6d23f5",
+   "id": "43c9b49b",
    "metadata": {},
    "source": [
     "### $$\\begin{cases}L'_{x}=-8+2\\lambda x=0 \\\\L'_{y}=6+2\\lambda y=0 \\\\L'_{\\lambda}=x^2+y^2-36=0\\end{cases}$$"
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d70d3b6",
+   "id": "6f26ebbd",
    "metadata": {},
    "source": [
     "### $$\\Rightarrow \\begin{cases} x=\\frac{4}{\\lambda} \\\\ y=\\frac{3}{\\lambda} \\\\ \\lambda^2=\\frac{25}{36}\\end{cases}$$"
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b52cd24",
+   "id": "afb46695",
    "metadata": {},
    "source": [
     "#### $$\\Rightarrow \\left[ \\begin{gathered} \\left\\{\\begin{gathered}x=\\frac{24}{5} \\\\ y=\\frac{18}{5} \\\\ y=\\frac{5}{6}\\end{gathered}\\right. \\\\ \\left\\{\\begin{gathered}x=-\\frac{24}{5} \\\\ y=-\\frac{18}{5} \\\\ y=-\\frac{5}{6} \\end{gathered}\\right.\\end{gathered} \\right.$$"
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0b8b6b4",
+   "id": "722a6a64",
    "metadata": {},
    "source": [
     "получаем две точки $(\\frac{24}{5},\\frac{18}{5},\\frac{5}{6})$ и $(-\\frac{24}{5},-\\frac{18}{5},-\\frac{5}{6})$"
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96f599bd",
+   "id": "366126ca",
    "metadata": {},
    "source": [
     "найдём вторые производные:"
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d8256cb",
+   "id": "60370fd9",
    "metadata": {},
    "source": [
     "### $$\\begin{gathered}L''_{xx}=2\\lambda \\\\ L''_{xy}=0 \\\\ L''_{x\\lambda}=2x\\end{gathered}$$"
@@ -120,23 +120,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb9f7254",
+   "id": "3da676c3",
    "metadata": {},
    "source": [
-    "### $$L''_{yx}=0 \\\\ L''_{yy}=2\\lambda \\\\ L''_{y\\lambda}=2y$$"
+    "### $$\\begin{gathered}L''_{yx}=0 \\\\ L''_{yy}=2\\lambda \\\\ L''_{y\\lambda}=2y\\end{gathered}$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2953b17a",
+   "id": "e99fd905",
    "metadata": {},
    "source": [
-    "### $$L''_{\\lambda x}=2x \\\\ L''_{\\lambda y}=2y \\\\ L''_{\\lambda\\lambda}=0$$"
+    "### $$\\begin{gathered}L''_{\\lambda x}=2x \\\\ L''_{\\lambda y}=2y \\\\ L''_{\\lambda\\lambda}=0\\end{gathered}$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0a4b3dc6",
+   "id": "a4176755",
    "metadata": {},
    "source": [
     "далее найдем определитель в общем виде, а затем уже разберемся с каждой точкой:"
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be8ff943",
+   "id": "8a8e7e47",
    "metadata": {},
    "source": [
     "### $$\\Delta=\\begin{vmatrix}2\\lambda & 0 & 2x\\\\ 0 & 2\\lambda & 2y\\\\2x & 2y & 0\\\\\\end{vmatrix}=\\begin{vmatrix}+ & - & +\\\\ - & + & -\\\\+ & - & +\\\\\\end{vmatrix}=2\\lambda \\cdot\\begin{vmatrix}2\\lambda & 2y\\\\2y & 0\\\\\\end{vmatrix}-0\\cdot\\begin{vmatrix}0 & 2y\\\\2x & 0\\\\\\end{vmatrix}+2x\\cdot\\begin{vmatrix}0 & 2\\lambda\\\\2x & 2y\\\\\\end{vmatrix}\\\\=2\\lambda \\cdot (2\\lambda \\cdot0-2y\\cdot2y)-0+2x\\cdot(0\\cdot2y - 2\\lambda\\cdot2x) = -8\\lambda(x^2+y^2)$$"
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4201b7d2",
+   "id": "46067c4c",
    "metadata": {},
    "source": [
     "по условию $x^2+y^2=36$, тогда"
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afcf60dc",
+   "id": "863fdb30",
    "metadata": {},
    "source": [
     "### $$\\Delta=-8\\lambda \\cdot 36=-288\\lambda$$"
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e54a150",
+   "id": "25d65c79",
    "metadata": {},
    "source": [
     "т.е. знак определителя засисит только от знака $\\lambda$"
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b76f5313",
+   "id": "648610e7",
    "metadata": {},
    "source": [
     "#### если $\\lambda=\\frac{5}{6}$, то $\\Delta<0$, следовательно $(\\frac{24}{5},\\frac{18}{5},\\frac{5}{6})$ - точка минимума"
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f96ee112",
+   "id": "9cf81ee8",
    "metadata": {},
    "source": [
     "#### если $\\lambda=-\\frac{5}{6}$, то $\\Delta>0$, следовательно $(-\\frac{24}{5},-\\frac{18}{5},-\\frac{5}{6})$ - точка максимума"
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad38d5c6",
+   "id": "75d6bf2b",
    "metadata": {},
    "source": [
     "составим функцию Лагранжа:"
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd271839",
+   "id": "f027ca05",
    "metadata": {},
    "source": [
     "### $$L(x,y,\\lambda)=2x^2+12xy+32y^2+15+\\lambda \\cdot (x^2+16y^2-64)$$"
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3010d424",
+   "id": "5266ff68",
    "metadata": {},
    "source": [
     "найдем частные производные, приравняем их к нулю и решим систему уравнений:"
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79cec1fc",
+   "id": "4dbf16b2",
    "metadata": {},
    "source": [
     "### $$\\begin{cases}L'_{x}=4x+12y+2\\lambda x=0, \\\\L'_{y}=12x+64y+32\\lambda y=0, \\\\L'_{\\lambda}=x^2+16y^2-64=0 \\end{cases}$$ "
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc54eb03",
+   "id": "c4f0b724",
    "metadata": {},
    "source": [
     "### $$\\Rightarrow\\begin{cases} x=-\\frac{12y}{4+2\\lambda} \\\\ 12(-\\frac{12y}{4+2\\lambda})+64y+32\\lambda y=0 \\\\ x^2+16y^2-64=0\\end{cases}$$ "
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1129201c",
+   "id": "df2d216d",
    "metadata": {},
    "source": [
     "### $$\\Rightarrow\\begin{cases} x=-\\frac{12y}{4+2\\lambda} \\\\ \\left[\\begin{gathered}\\lambda = -\\frac{7}{2} \\\\ \\lambda = -\\frac{1}{2}\\end{gathered}\\right.\\\\x^2+16y^2-64=0\\end{cases}$$ "
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "045b62d8",
+   "id": "cf10fe27",
    "metadata": {},
    "source": [
     "### $$\\Rightarrow \\left[ \\begin{gathered} \\left\\{\\begin{gathered}\\lambda =-\\frac{7}{2} \\\\ x=4y \\\\ \\left[\\begin{gathered}y=\\sqrt{2} \\\\y=-\\sqrt{2}\\end{gathered}\\right.\\end{gathered}\\right. \\\\\\left\\{\\begin{gathered}\\lambda =-\\frac{1}{2} \\\\ x=-4y \\\\ \\left[\\begin{gathered} y=\\sqrt{2} \\\\y=-\\sqrt{2}\\end{gathered}\\right.\\end{gathered}\\right.\\end{gathered}\\right.$$"
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49a27758",
+   "id": "b88571de",
    "metadata": {},
    "source": [
     "получаем четыре точки \n",
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cda229de",
+   "id": "325951c3",
    "metadata": {},
    "source": [
     "найдём вторые производные:"
@@ -290,31 +290,31 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5842b094",
+   "id": "6110c83f",
    "metadata": {},
    "source": [
-    "### $$L''_{xx}=4+2\\lambda \\\\ L''_{xy}=12 \\\\ L''_{x\\lambda}=2x$$"
+    "### $$\\begin{gathered}L''_{xx}=4+2\\lambda \\\\ L''_{xy}=12 \\\\ L''_{x\\lambda}=2x\\end{gathered}$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d948ff32",
+   "id": "7f9b9af1",
    "metadata": {},
    "source": [
-    "### $$L''_{yx}=12 \\\\ L''_{yy}=64+32\\lambda \\\\ L''_{y\\lambda}=32y$$"
+    "### $$\\begin{gathered}L''_{yx}=12 \\\\ L''_{yy}=64+32\\lambda \\\\ L''_{y\\lambda}=32y\\end{gathered}$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2a78a609",
+   "id": "537c6e4a",
    "metadata": {},
    "source": [
-    "### $$L''_{\\lambda x}=2x \\\\ L''_{\\lambda y}=32y \\\\ L''_{\\lambda\\lambda}=0$$"
+    "### $$\\begin{gathered}L''_{\\lambda x}=2x \\\\ L''_{\\lambda y}=32y \\\\ L''_{\\lambda\\lambda}=0\\end{gathered}$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3c689f3f",
+   "id": "e00aabfd",
    "metadata": {},
    "source": [
     "далее найдем определитель в общем виде, а затем уже разберемся с каждой точкой:"
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bcc86b7",
+   "id": "5698374d",
    "metadata": {},
    "source": [
     "### $$\\Delta=\\begin{vmatrix}4+2\\lambda & 12 & 2x\\\\ 12 & 64+32\\lambda & 32y\\\\2x & 32y & 0\\\\\\end{vmatrix}=-256(x^2+16y^2)-126\\lambda(x^2+16y^2)+1536xy$$"
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71067cec",
+   "id": "b8504606",
    "metadata": {},
    "source": [
     "по условию $x^2+16y^2=64$, тогда"
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5257a074",
+   "id": "20792129",
    "metadata": {},
    "source": [
     "### $$\\Delta=-256\\cdot64-126\\lambda\\cdot64+1536xy=-16384-8192\\lambda+1536xy$$"
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f957f0c9",
+   "id": "a5df0fef",
    "metadata": {},
    "source": [
     "точкa $(4\\sqrt{2},\\sqrt{2},-\\frac{7}{2})$:"
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a386e617",
+   "id": "36fd98d6",
    "metadata": {},
    "source": [
     "### $$\\Delta=-16384-8192\\cdot(-\\frac{7}{2})+1536\\cdot4\\sqrt{2}\\cdot \\sqrt{2}>0$$"
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db1fa728",
+   "id": "cc55e240",
    "metadata": {},
    "source": [
     "#### следовательно, точкa $(4\\sqrt{2},\\sqrt{2},-\\frac{7}{2})$ - точка максимума"
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76455c25",
+   "id": "ddaedf6f",
    "metadata": {},
    "source": [
     "точкa $(-4\\sqrt{2},-\\sqrt{2},-\\frac{7}{2})$:"
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a65a471",
+   "id": "83ed4ca5",
    "metadata": {},
    "source": [
     "### $$\\Delta=-16384-8192\\cdot(-\\frac{7}{2})+1536\\cdot(-4\\sqrt{2})\\cdot (-\\sqrt{2})>0$$"
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "128e0738",
+   "id": "dfcbc554",
    "metadata": {},
    "source": [
     "#### следовательно, точкa $(-4\\sqrt{2},-\\sqrt{2},-\\frac{7}{2})$ - точка максимума"
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b25d8da0",
+   "id": "89ceb486",
    "metadata": {},
    "source": [
     "точкa $(-4\\sqrt{2},\\sqrt{2},-\\frac{1}{2})$:"
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ef87e65",
+   "id": "b3b8641d",
    "metadata": {},
    "source": [
     "### $$\\Delta=-16384-8192\\cdot(-\\frac{1}{2})+1536\\cdot(-4\\sqrt{2})\\cdot \\sqrt{2}<0$$"
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea1a7551",
+   "id": "288b67c8",
    "metadata": {},
    "source": [
     "#### следовательно, точкa $(-4\\sqrt{2},\\sqrt{2},-\\frac{1}{2})$ - точка минимума"
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f23334cc",
+   "id": "831d81c1",
    "metadata": {},
    "source": [
     "точкa $(4\\sqrt{2},-\\sqrt{2},-\\frac{1}{2})$:"
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c708622",
+   "id": "e85a70ec",
    "metadata": {},
    "source": [
     "### $$\\Delta=-16384-8192\\cdot(-\\frac{1}{2})+1536\\cdot4\\sqrt{2}\\cdot(-\\sqrt{2})<0$$"
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9bda072",
+   "id": "c6b0fc19",
    "metadata": {},
    "source": [
     "#### следовательно, точкa $(4\\sqrt{2},-\\sqrt{2},-\\frac{1}{2})$ - точка минимума"
@@ -443,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "983dbf0e",
+   "id": "44fb23eb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -503,18 +503,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2260ed7a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{(1.37568714, -0.17475798), (1.27330206, 1.66203912), (2.49435653, 0.70831752), (-3.65307996, -0.27476341), (2.21775363, 0.61019398), (2.21775363, 0.61019397)}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from scipy.optimize import fsolve, broyden2\n",
