--- a/Calculus_HW_10.ipynb
+++ b/Calculus_HW_10.ipynb
@@ -426,41 +426,207 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c23a9d8e",
+   "cell_type": "markdown",
+   "id": "f41db344",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "тут возникли вопросы, т.к."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a25693d",
+   "metadata": {},
+   "source": [
+    "главный член ряда стремится к нулю:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "c1b59b35",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n",
+      "2.0\n",
+      "1.7777777777777777\n",
+      "1.5\n",
+      "1.2288\n",
+      "0.9876543209876543\n",
+      "0.7833470747732663\n",
+      "0.615234375\n",
+      "0.4795682347094451\n",
+      "0.37158912\n",
+      "0.28652738328205\n",
+      "0.22005029721079103\n",
+      "0.16842504809176942\n",
+      "0.1285392589694592\n",
+      "0.09785446801588213\n",
+      "0.0743326818337664\n",
+      "0.056356858730607355\n",
+      "0.042655579881714825\n",
+      "0.03223636917510284\n",
+      "0.0243290200817664\n",
+      "0.018338703594847575\n",
+      "0.013807896370135662\n",
+      "0.010385899129920077\n",
+      "0.007804691928798592\n",
+      "0.005859969473390181\n",
+      "0.004396346020327943\n",
+      "0.0032958773480458777\n",
+      "0.00246919747005608\n",
+      "0.0018487013373584761\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "sequence_sum = 0\n",
+    "for x in range(1, 30):\n",
+    "    y = (2 ** x * math.factorial(x)) / (x ** x)\n",
+    "#     sequence_sum += y\n",
+    "    print(y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04159831",
+   "metadata": {},
+   "source": [
+    "да и сумма ряда собирается в определенное число:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "e76e72f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n",
+      "4.0\n",
+      "5.777777777777778\n",
+      "7.277777777777778\n",
+      "8.506577777777778\n",
+      "9.494232098765433\n",
+      "10.2775791735387\n",
+      "10.8928135485387\n",
+      "11.372381783248144\n",
+      "11.743970903248144\n",
+      "12.030498286530193\n",
+      "12.250548583740985\n",
+      "12.418973631832754\n",
+      "12.547512890802214\n",
+      "12.645367358818095\n",
+      "12.719700040651862\n",
+      "12.77605689938247\n",
+      "12.818712479264184\n",
+      "12.850948848439286\n",
+      "12.875277868521053\n",
+      "12.893616572115901\n",
+      "12.907424468486036\n",
+      "12.917810367615957\n",
+      "12.925615059544755\n",
+      "12.931475029018145\n",
+      "12.935871375038474\n",
+      "12.93916725238652\n",
+      "12.941636449856576\n",
+      "12.943485151193935\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "sequence_sum = 0\n",
+    "for x in range(1, 30):\n",
+    "    y = (2 ** x * math.factorial(x)) / (x ** x)\n",
+    "    sequence_sum += y\n",
+    "    print(sequence_sum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7b85bc6",
+   "metadata": {},
+   "source": [
+    "по всем понятиям, ряд сходится,"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af4d31d1",
+   "metadata": {},
+   "source": [
+    "НО!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89ce786c",
+   "metadata": {},
+   "source": [
+    "при использлвании признака д’Аламбера, получается вот что:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d04f4225",
+   "metadata": {},
+   "source": [
+    "### $$\\lim_{n\\to +\\infty}(\\frac{2^{n+1}\\cdot(n+1)!}{n^{n+1}}:\\frac{2^{n}\\cdot n!}{n^{n}})=\\lim_{n\\to +\\infty}(\\frac{2(n+1)}{n})=2$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "480b04e7",
+   "metadata": {},
+   "source": [
+    "т.к. 2>1, то, вроде как, ряд расходится!!!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b6752e5",
+   "metadata": {},
+   "source": [
+    "при использлвании признака признака Раабе получатся схожая картина:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f90ac64c",
+   "metadata": {},
+   "source": [
+    "### $$\\lim_{n\\to +\\infty}n(\\frac{2^{n}\\cdot n!}{n^{n}}:\\frac{2^{n+1}\\cdot(n+1)!}{n^{n+1}})=\\lim_{n\\to +\\infty}(-\\frac{n^2+2n}{2(n+1)})=-\\infty$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7556733",
+   "metadata": {},
+   "source": [
+    "$-\\infty$<1, то, вроде как, ряд опять расходится!!!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75965493",
+   "metadata": {},
+   "source": [
+    "на что опираться? на признаки или на численное исследование?"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cae2baf8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ce046d69",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "785769ef",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "78dc2b7b",
+   "id": "1eaf362a",
    "metadata": {},
    "outputs": [],
    "source": []
