--- a/Calculus_HW_10.ipynb
+++ b/Calculus_HW_10.ipynb
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "7f2f23ee",
    "metadata": {},
    "outputs": [
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f41db344",
+   "id": "c2d076a0",
    "metadata": {},
    "source": [
     "тут возникли вопросы, т.к."
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a25693d",
+   "id": "0e56a129",
    "metadata": {},
    "source": [
     "главный член ряда стремится к нулю:"
@@ -443,8 +443,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "c1b59b35",
+   "execution_count": 8,
+   "id": "fa89ab59",
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04159831",
+   "id": "211eef0d",
    "metadata": {},
    "source": [
     "да и сумма ряда собирается в определенное число:"
@@ -502,8 +502,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "e76e72f7",
+   "execution_count": 9,
+   "id": "f2d10b11",
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7b85bc6",
+   "id": "13735577",
    "metadata": {},
    "source": [
     "по всем понятиям, ряд сходится,"
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af4d31d1",
+   "id": "991c1a7a",
    "metadata": {},
    "source": [
     "НО!"
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89ce786c",
+   "id": "71033cbb",
    "metadata": {},
    "source": [
     "при использлвании признака д’Аламбера, получается вот что:"
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d04f4225",
+   "id": "715eda1d",
    "metadata": {},
    "source": [
     "### $$\\lim_{n\\to +\\infty}(\\frac{2^{n+1}\\cdot(n+1)!}{n^{n+1}}:\\frac{2^{n}\\cdot n!}{n^{n}})=\\lim_{n\\to +\\infty}(\\frac{2(n+1)}{n})=2$$"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "480b04e7",
+   "id": "98f035f6",
    "metadata": {},
    "source": [
     "т.к. 2>1, то, вроде как, ряд расходится!!!"
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b6752e5",
+   "id": "552338ef",
    "metadata": {},
    "source": [
     "при использлвании признака признака Раабе получатся схожая картина:"
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f90ac64c",
+   "id": "ad6ae374",
    "metadata": {},
    "source": [
     "### $$\\lim_{n\\to +\\infty}n(\\frac{2^{n}\\cdot n!}{n^{n}}:\\frac{2^{n+1}\\cdot(n+1)!}{n^{n+1}})=\\lim_{n\\to +\\infty}(-\\frac{n^2+2n}{2(n+1)})=-\\infty$$"
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7556733",
+   "id": "e4ba1f1c",
    "metadata": {},
    "source": [
     "$-\\infty$<1, то, вроде как, ряд опять расходится!!!"
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75965493",
+   "id": "cd223355",
    "metadata": {},
    "source": [
     "на что опираться? на признаки или на численное исследование?"
@@ -626,7 +626,92 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1eaf362a",
+   "id": "aa7c56ca",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "159cfef3",
+   "metadata": {},
+   "source": [
+    "__4*.__ Исследовать сходимость ряда\n",
+    "\n",
+    "### $$\\frac{3\\cdot1!}{1}+\\frac{3^2\\cdot2!}{2^2}+\\,...\\,+\\frac{3^n\\cdot n!}{n^n}+\\,...\\,=\\sum\\limits_{n=1}^{+\\infty}\\frac{3^n\\cdot n!}{n^n}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ae6dd28a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n",
+      "4.5\n",
+      "6.0\n",
+      "7.59375\n",
+      "9.3312\n",
+      "11.25\n",
+      "13.384219160383854\n",
+      "15.767784118652344\n",
+      "18.43621399176955\n",
+      "21.42770112\n",
+      "24.783919124152984\n",
+      "28.55072021484375\n",
+      "32.77879979843922\n",
+      "37.52437078453951\n",
+      "42.849873690624\n",
+      "48.824740845945904\n",
+      "55.52622926817785\n",
+      "63.04033514538773\n",
+      "71.46280236856195\n",
+      "80.9002377631367\n",
+      "91.47134632455418\n",
+      "103.30830074933098\n",
+      "116.55826080647104\n",
+      "131.38505958483148\n",
+      "147.9710753705262\n",
+      "166.51930985721634\n",
+      "187.255695582064\n",
+      "210.43165792818263\n",
+      "236.32695976249147\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "sequence_sum = 0\n",
+    "for x in range(1, 30):\n",
+    "    y = (3 ** x * math.factorial(x)) / (x ** x)\n",
+    "#     sequence_sum += y\n",
+    "    print(y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07a39752",
+   "metadata": {},
+   "source": [
+    "а вот здесь уже всё по феншую - главный член ряда к нулю не стремится!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1f1f4d8",
+   "metadata": {},
+   "source": [
+    "признак д’Аламбера также подтверждает, что ряд расходится!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "507ecbb1",
    "metadata": {},
    "outputs": [],
    "source": []
