--- a/Calculus_HW_10.ipynb
+++ b/Calculus_HW_10.ipynb
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2d076a0",
+   "id": "6034cf2d",
    "metadata": {},
    "source": [
     "тут возникли вопросы, т.к."
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e56a129",
+   "id": "0edf5cb9",
    "metadata": {},
    "source": [
     "главный член ряда стремится к нулю:"
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "fa89ab59",
+   "id": "98763f73",
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "211eef0d",
+   "id": "5ff79c71",
    "metadata": {},
    "source": [
     "да и сумма ряда собирается в определенное число:"
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f2d10b11",
+   "id": "f0b587e9",
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13735577",
+   "id": "520c96c8",
    "metadata": {},
    "source": [
     "по всем понятиям, ряд сходится,"
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "991c1a7a",
+   "id": "ec4f3b86",
    "metadata": {},
    "source": [
     "НО!"
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71033cbb",
+   "id": "19df0e34",
    "metadata": {},
    "source": [
     "при использлвании признака д’Аламбера, получается вот что:"
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "715eda1d",
+   "id": "f9619481",
    "metadata": {},
    "source": [
     "### $$\\lim_{n\\to +\\infty}(\\frac{2^{n+1}\\cdot(n+1)!}{n^{n+1}}:\\frac{2^{n}\\cdot n!}{n^{n}})=\\lim_{n\\to +\\infty}(\\frac{2(n+1)}{n})=2$$"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98f035f6",
+   "id": "5e1beafa",
    "metadata": {},
    "source": [
     "т.к. 2>1, то, вроде как, ряд расходится!!!"
@@ -593,15 +593,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "552338ef",
+   "id": "35c72189",
    "metadata": {},
    "source": [
-    "при использлвании признака признака Раабе получатся схожая картина:"
+    "при использовании признака признака Раабе получатся схожая картина:"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ad6ae374",
+   "id": "825c5439",
    "metadata": {},
    "source": [
     "### $$\\lim_{n\\to +\\infty}n(\\frac{2^{n}\\cdot n!}{n^{n}}:\\frac{2^{n+1}\\cdot(n+1)!}{n^{n+1}})=\\lim_{n\\to +\\infty}(-\\frac{n^2+2n}{2(n+1)})=-\\infty$$"
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4ba1f1c",
+   "id": "301c3970",
    "metadata": {},
    "source": [
     "$-\\infty$<1, то, вроде как, ряд опять расходится!!!"
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd223355",
+   "id": "389479e4",
    "metadata": {},
    "source": [
     "на что опираться? на признаки или на численное исследование?"
@@ -626,14 +626,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa7c56ca",
+   "id": "6348705e",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "159cfef3",
+   "id": "614ee50a",
    "metadata": {},
    "source": [
     "__4*.__ Исследовать сходимость ряда\n",
@@ -644,7 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ae6dd28a",
+   "id": "975e0736",
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07a39752",
+   "id": "43029ac6",
    "metadata": {},
    "source": [
     "а вот здесь уже всё по феншую - главный член ряда к нулю не стремится!"
@@ -702,16 +702,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1f1f4d8",
+   "id": "1e0c1941",
    "metadata": {},
    "source": [
-    "признак д’Аламбера также подтверждает, что ряд расходится!"
+    "признак д’Аламбера также подтверждает, что ряд расходится:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fae73c9f",
+   "metadata": {},
+   "source": [
+    "### $$\\lim_{n\\to +\\infty}(\\frac{3^{n+1}\\cdot(n+1)!}{n^{n+1}}:\\frac{3^{n}\\cdot n!}{n^{n}})=\\lim_{n\\to +\\infty}(\\frac{3(n+1)}{n})=3>1$$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "507ecbb1",
+   "id": "b282d855",
    "metadata": {},
    "outputs": [],
    "source": []
